--- a/donate/once.html
+++ b/donate/once.html
@@ -8,16 +8,17 @@
 		<link href="../_app/immutable/assets/_layout.4af3d1f7.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.dd0e0c09.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.8a032cc4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.cff4bce6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.22f3b4ff.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.746ff7d7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.c8733d54.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.d6854d3a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.3eb75e24.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.8e0d2ea5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1d8f47c4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.22eff181.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.e9226815.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/main.cdbfe6df.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.7ccb9452.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-once-page.svelte.d4f1de59.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.7ab5bd4e.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/once"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/once"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
@@ -57,7 +58,7 @@
 			
 			<script>
 				{
-					__sveltekit_824cd1 = {
+					__sveltekit_1eo1tir = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -66,10 +67,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.dd0e0c09.js"),
-						import("../_app/immutable/entry/app.c8733d54.js")
+						import("../_app/immutable/entry/start.8a032cc4.js"),
+						import("../_app/immutable/entry/app.3eb75e24.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_824cd1.element, {
+						kit.start(app, __sveltekit_1eo1tir.element, {
 							node_ids: [0, 2, 8],
 							data,
 							form: null,
