--- a/donate/tinkoff.html
+++ b/donate/tinkoff.html
@@ -5,19 +5,19 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout.4af3d1f7.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.355d6186.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.8f362ef1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.4e4be5c0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.65e05767.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.772c21a7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a38e23c5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.0e5f7078.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.6e9bd6e3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.0928f714.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.79089877.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.289ab25a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.5d90bffd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.77134369.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.d7179482.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.c90cf18c.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.654ba5b5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.1181654b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/tinkoff"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/tinkoff"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -34,12 +34,12 @@
 </button></p>
 
 </div>
-	<div class="footer svelte-80q6by"><nav class="svelte-1uy96q0"><a href="http://sveltekit-prerender/" class="svelte-1uy96q0">Главная</a>
+	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="http://sveltekit-prerender/" class="svelte-sn6y8m">Главная</a>
 
 		/
-			<a href="http://sveltekit-prerender/donate" class="svelte-1uy96q0">Пожертвовать</a>
+			<a href="http://sveltekit-prerender/donate" class="svelte-sn6y8m">Пожертвовать</a>
 			/
-				<a href="http://sveltekit-prerender/donate/once" class="svelte-1uy96q0">Разовое пожертвование</a>
+				<a href="http://sveltekit-prerender/donate/once" class="svelte-sn6y8m">Разовое пожертвование</a>
 				</nav>
 		<ul class="svelte-15n3bs8"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
 	<li><a href="https://twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li>
@@ -54,7 +54,7 @@
 			
 			<script>
 				{
-					__sveltekit_u3hd6f = {
+					__sveltekit_x5ioxc = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -63,10 +63,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.8f362ef1.js"),
-						import("../_app/immutable/entry/app.0e5f7078.js")
+						import("../_app/immutable/entry/start.4e4be5c0.js"),
+						import("../_app/immutable/entry/app.0928f714.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_u3hd6f.element, {
+						kit.start(app, __sveltekit_x5ioxc.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
