--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.4af3d1f7.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.8f362ef1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4e4be5c0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.65e05767.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.772c21a7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a38e23c5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0e5f7078.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.6e9bd6e3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0928f714.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.79089877.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.289ab25a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.5d90bffd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.d25c12bf.js">
@@ -94,7 +94,7 @@
 			
 			<script>
 				{
-					__sveltekit_u3hd6f = {
+					__sveltekit_x5ioxc = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -103,10 +103,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.8f362ef1.js"),
-						import("./_app/immutable/entry/app.0e5f7078.js")
+						import("./_app/immutable/entry/start.4e4be5c0.js"),
+						import("./_app/immutable/entry/app.0928f714.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_u3hd6f.element, {
+						kit.start(app, __sveltekit_x5ioxc.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
